selhosted_apps/excalidraw/deploy.yaml
# excalidraw-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: excalidraw
  namespace: excalidraw
spec:
  replicas: 1
  selector:
    matchLabels:
      app: excalidraw
  template:
    metadata:
      labels:
        app: excalidraw
    spec:
      containers:
      - name: excalidraw
        image: docker.io/excalidraw/excalidraw:latest
        ports:
        - containerPort: 80
