selhosted_apps/excalidraw/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: excalidraw-ingress
  namespace: excalidraw
spec:
  ingressClassName: "traefik"
  rules:
  - host: draw.local.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: excalidraw-service
            port:
              number: 80
  tls:
  - hosts:
    - draw.local.io
    secretName: excalidraw-ingress-tls-cert
